--- a/AIDL/TestServer/app/src/main/AndroidManifest.xml
+++ b/AIDL/TestServer/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </service>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
